@@ -1,3 +1,11 @@
+2005-07-14  Keith Packard  <keithp@keithp.com>
+
+	* src/Makefile.am:
+	Fix .so version number.
+	Change to -version-number form for libtool to ensure
+	version numbers are consistent with monolithic tree
+	on all platforms.
+
 2005-07-08  Keith Packard  <keithp@keithp.com>
 
 	* .cvsignore:
